using ModelSerializer to reduce complexity