@@ -70,7 +70,7 @@ def employeeDetailView(request, pk):
             return Response(serializer.errors)
 
 
-# Assignment view
+# Assignment works
 @api_view(['GET', 'POST'])
 def courseListView(request):
     if request.method == 'GET':
@@ -78,8 +78,33 @@ def courseListView(request):
         serializer = CourseSerializer(courses, many=True)
         return Response(serializer.data)
 
-    if request.method == 'POST':
+    elif request.method == 'POST':
         serializer = CourseSerializer(data=request.data)
+
+        if serializer.is_valid():
+            serializer.save()
+            return Response(serializer.data, status=status.HTTP_201_CREATED)
+        else:
+            return Response(serializer.errors)
+
+
+@api_view(['GET', 'DELETE', 'PUT'])
+def courseDetailView(request, pk):
+    try:
+        course = Course.objects.get(pk=pk)
+    except Course.DoesNotExist:
+        return Response(status=status.HTTP_404_NOT_FOUND)
+
+    if request.method == 'GET':
+        serializer = CourseSerializer(course)
+        return Response(serializer.data)
+
+    elif request.method == 'DELETE':
+        course.delete()
+        return Response(status=status.HTTP_204_NO_CONTENT)
+
+    elif request.method == 'PUT':
+        serializer = CourseSerializer(course, data=request.data)
 
         if serializer.is_valid():
             serializer.save()
